[gd_scene load_steps=10 format=3 uid="uid://dddpukdy58hm8"]

[ext_resource type="FontFile" uid="uid://cpsua7jawk5h0" path="res://assets/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf" id="1_c4agu"]
[ext_resource type="Texture2D" uid="uid://bs4cx7yep5fap" path="res://UI/SpriteSheet.png" id="2_s6kiq"]
[ext_resource type="Script" path="res://UI/Pause_Menu/pause_menu.gd" id="3_fctk4"]
[ext_resource type="Texture2D" uid="uid://baluwwbfn4sf7" path="res://UI/Buttons/button.png" id="3_p72d5"]
[ext_resource type="Texture2D" uid="uid://cs4m8p4hrxg7v" path="res://UI/Buttons/pressed_button.png" id="4_3vpk7"]
[ext_resource type="Texture2D" uid="uid://ox6g8eumw3rb" path="res://UI/Buttons/hover_button.png" id="5_68kam"]

[sub_resource type="Theme" id="Theme_k2qkp"]
Label/colors/font_color = Color(0.105882, 0.133333, 0.211765, 1)
Label/font_sizes/font_size = 25
Label/fonts/font = ExtResource("1_c4agu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2xsdn"]
texture = ExtResource("2_s6kiq")
texture_margin_left = 7.0
texture_margin_top = 7.0
texture_margin_right = 7.0
texture_margin_bottom = 7.0
region_rect = Rect2(240, 32, 81, 80)

[sub_resource type="LabelSettings" id="LabelSettings_jynnf"]
font_size = 15
font_color = Color(0.105882, 0.133333, 0.211765, 1)

[node name="PauseMenu" type="PanelContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_k2qkp")
theme_override_styles/panel = SubResource("StyleBoxTexture_2xsdn")
script = ExtResource("3_fctk4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="SaveButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_p72d5")
texture_pressed = ExtResource("4_3vpk7")
texture_hover = ExtResource("5_68kam")

[node name="SaveLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/SaveButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.5
offset_right = 20.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Save"
label_settings = SubResource("LabelSettings_jynnf")
horizontal_alignment = 1

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_p72d5")
texture_pressed = ExtResource("4_3vpk7")
texture_hover = ExtResource("5_68kam")

[node name="QuitLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.5
offset_right = 20.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = SubResource("LabelSettings_jynnf")
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
